# lazydeep1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: RockScissorsPaper.cpp
lazy/: Constant.hpp  Operand.hpp  Operator.hpp  Placeholder.hpp  Variable.hpp
lazy/ops/: Math.hpp  NN.hpp  Operator.hpp
lazy/train/: AdamOptimizer.hpp  MomentumOptimizer.hpp  Optimizer.hpp
